name:               ogg2mogg
version:            0.0.1
synopsis:           Add a header to OGG files for use in Rock Band games
author:             Michael Tolly
maintainer:         miketolly@gmail.com
build-type:         Simple
cabal-version:      >= 1.8
data-dir:           data
data-files:         MagmaCompiler.exe, oggenc.exe
                    , gen/main_pc_0.ark, gen/main_pc.hdr
                    , cover.bmp, notes.mid, silence.wav
                    , hellskitchen.rbproj

executable ogg2mogg
  main-is:          Main.hs
  other-modules:    Paths_ogg2mogg
  build-depends:    base >= 4.6 && < 5.0
  ghc-options:      -Wall
