name:               ogg2mogg
version:            0.1
synopsis:           Add a header to OGG files for use in Rock Band games
author:             Michael Tolly
maintainer:         miketolly@gmail.com
build-type:         Simple
cabal-version:      >= 1.10
extra-source-files: data/cover.bmp
                    data/hellskitchen.rbproj
                    data/MagmaCompiler.exe
                    data/notes.mid
                    data/oggenc.exe
                    data/silence.wav
                    data/gen/main_pc.hdr
                    data/gen/main_pc_0.ark
                    README.md

library
  exposed-modules:  Codec.Container.Ogg.Mogg
  hs-source-dirs:   src
  build-depends:    base
                    , filepath
                    , directory
                    , temporary
                    , process
                    , bytestring
                    , file-embed
  ghc-options:      -Wall
  default-language: Haskell2010

executable ogg2mogg
  main-is:          Main.hs
  build-depends:    base
                    , ogg2mogg
  ghc-options:      -Wall
  default-language: Haskell2010
